Added to the css, included a readme file, and deleted unnecessary comments left in js doc

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Physic Game</title>
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
     <div>
         <h1>The Physic Game</h1>
-        <p><span id="directions-text"> Guess what letter I'm thinking of!</span></p>
+        <p><span id="directions-text">Guess what letter I'm thinking of!</span></p>
         <p>Wins: <span id="wins-text"></span></p>
         <p>Losses: <span id="losses-text"></span></p>
         <p>Guesses Left: <span id="guesses-left"></span></p>
